samples/_failures_safe/1760960750_ab7f4d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cfc8eee5.c: In function ‘print_shortest_paths’:
./samples/SAFE/__tmp_cfc8eee5.c:150:13: error: expected expression at end of input
  150 |             printf("Node %d: distance %d\n",
      |             ^~~~~~
./samples/SAFE/__tmp_cfc8eee5.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cfc8eee5.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cfc8eee5.c:150:13: error: expected declaration or statement at end of input
